nullaway_error_9175F918-87EC-4571-B7C6-15C1EAFEE898.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-web/src/main/java/org/springframework/http/RequestEntity.java:209: error: [NullAway] dereferenced expression otherEntity is @Nullable
		return (ObjectUtils.nullSafeEquals(this.method, otherEntity.method) &&
		                                                           ^
    (see http://t.uber.com/nullaway )
